--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   connectivity_plus: ^6.1.0
+  url_launcher: ^6.3.1
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
